--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 				</div>
 				<div class='row'>
 					<div class='col-md-12'>
-						<button class='btn btn-primary create-event' role='button'>Create event</button><br /><br />
+						<button class='btn btn-success create-event' role='button'>Create event</button><br /><br />
 					</div>
 				</div>
 				<div class='row'>
@@ -734,8 +734,8 @@
 							<div class='panel panel-teal panel-widget border-right'>
 								<div class='row no-padding'>
 									<em class='fa fa-xl fa-calendar-minus-o color-teal'>&nbsp;</em>
-									<div class='large num_projects'>11</div>
-									<div class='text-muted'>Previous unpaid events</div>
+									<div class='large num_projects'>$2,940</div>
+									<div class='text-muted'>Average monthly income</div>
 								</div>
 							</div>
 						</div>
@@ -743,7 +743,7 @@
 							<div class='panel panel-teal panel-widget border-right'>
 								<div class='row no-padding'>
 									<em class='fa fa-xl fa-money color-red'>&nbsp;</em>
-									<div class='large num_incomplete_tasks'>$28,000</div>
+									<div class='large num_incomplete_tasks'>$26,830</div>
 									<div class='text-muted'>Total income (year)</div>
 								</div>
 							</div>
