Cut 'view' file apart into module

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 				<h4><%- group.groupName %> - <%- event.calEvent.string %></h4>
 				<p>Show: <b><%- event.show %></b> <%if (event.presenter !== '') { %>| Presenter: <b><%- event.presenter %></b> <% } %> <%if (event.activity !== '' && event.activity !== null) { %>| Activity: <b><%- event.activity %></b> <% } %></p>
 				<p class='invoice_status'></p>
-				<p><button class='btn btn-info event-view' role='button'>View</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button> <button class='btn btn-warning event-payment'>Add Payment</button> <%if (event.finished === false) { %><button class='btn btn-success event-presented'>Show Presented</button><% } %></p>
+				<p><button class='btn btn-info event-view' role='button'>View</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button> <button class='btn btn-warning event-payment'>Add Payment</button> <%if (event.finished === false || event.finished === 'false') { %><button class='btn btn-success event-presented'>Show Presented</button><% } %></p>
 			</div>
 
 		</script>
@@ -849,6 +849,8 @@
 
 		</script>
 
+		<script type='text/'
+
 		<script type='text/template' id='payment-view-template'>
 
 			<div id='main' class='col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2'>
@@ -928,7 +930,9 @@
 		
 		<?!= include('models'); ?>
 		<?!= include('collections'); ?>
-		<?!= include('views'); ?>
+		<?!= include('primary_view'); ?>
+		<?!= include('scheduling_view'); ?>
+		<?!= include('accounting_view'); ?>
 		<?!= include('scripts'); ?>
 		
 	</body>
