--- a/collections.html
+++ b/collections.html
@@ -121,7 +121,6 @@ app.EventList = Backbone.Firebase.Collection.extend({
 
         if (month >= 10) { // October or better, NEEDS TO CHANGE EVENTUALLY!!!!
 
-          console.log(month + ' ' + this.models[i].attributes.numOfPeople);
           output[month - 1] += parseInt(this.models[i].attributes.numOfPeople);
 
         }
@@ -136,7 +135,7 @@ app.EventList = Backbone.Firebase.Collection.extend({
   },
   getAttendance: function() { // STARTING IN OCTOBER!
 
-    var output = 13079;
+    var output = 13131;
     for (var i = 0; i < this.models.length; i++) {
 
       if (this.models[i].attributes.finished === true) { // Show is finished
@@ -146,6 +145,7 @@ app.EventList = Backbone.Firebase.Collection.extend({
         if (month >= 10) { // October or better, NEEDS TO CHANGE EVENTUALLY!!!!
 
           output += parseInt(this.models[i].attributes.numOfPeople);
+          console.log(this.models[i].attributes.numOfPeople + ' ' + this.models[i].attributes.calEvent.string);
 
         }
 
