--- a/index.html
+++ b/index.html
@@ -887,6 +887,7 @@
               		</div>
               	</div>
 	      		<div class='payment-land'></div>
+				<div class='totals_land'></div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -901,7 +902,7 @@
 
 			<div class='row'>
 				<div class='col-md-4'>
-					Amount: <b><%- amount %></b>
+					Amount: <b>$<%- amount %></b>
 				</div>
 				<div class='col-md-4'>
 					Date Posted: <b><%- moment(datePosted).format("dddd, MMMM Do YYYY") %></b>
